# chutes-miner-china

./: .gitignore  CheckNode.py  Dockerfile  README.md  README_CN.md  audit_exporter.py  checknode.html  gepetto.py  pyproject.toml
ansible/: README.md  extras.yaml  extras.yml  fix-containerd.yml  inventory.yml  join-cluster.yml  nvidia.yaml  site.yml  upgrade-nvidia.yml  wireguard.yml
ansible/templates/: cilium.conf.j2  config.toml.j2  dns-forwarder-tcp.service.j2  dns-forwarder-udp.service.j2  hosts.toml.j2  kubernetes-dns.conf.j2  resolved.conf.j2  update-dns.service.j2  update-dns.sh.j2  wg0-primary.conf.j2  wg0-worker.conf.j2
api/: associations.py  auth.py  constants.py  exceptions.py  k8s.py  main.py  redis_pubsub.py  socket_client.py  utils.py
api/chute/: schemas.py
api/config/: __init__.py
api/database/: __init__.py  orms.py
api/deployment/: router.py  schemas.py
api/gpu/: router.py  schemas.py
api/migrations/: 20241227152257_verification_timestamp.sql  20241228093101_instance_trail.sql  20250119084318_server_lock.sql  20250119203151_chute_ban.sql  20250521171037_chutes_version.sql
api/registry/: router.py
api/server/: router.py  schemas.py  util.py
charts/: Chart.yaml  values.yaml
charts/templates/: _helpers.tpl  api-cr.yaml  api-crb.yaml  api-deployment.yaml  api-sa.yaml  api-svc.yaml  audit-export-cronjob.yaml  bootstrap-np.yaml  cache-cleanup-cm.yaml  chutes-np.yaml  failed-chute-cleanup-cronjob.yaml  gepetto-deployment.yaml  hf-cache-cleanup-cm.yaml  one-time-passwords.yaml  porter-deployment.yaml  porter-svc.yaml  postgres-cm.yaml  postgres-deployment.yaml  postgres-np.yaml  postgres-pvc.yaml  postgres-secrets.yaml  postgres-svc.yaml  redis-deployment.yaml  redis-np.yaml  redis-secrets.yaml  redis-svc.yaml  registry-cm.yaml  registry-daemonset.yaml  registry-deployment.yaml  registry-svc.yaml  squid-cm.yaml  squid-daemonset.yaml  squid-deployment.yaml  squid-np.yaml  squid-pvc.yaml  squid-svc.yaml
cli/: setup.py
graval_bootstrap/: Dockerfile  bootstrap.py  pyproject.toml  requirements.txt  test_graval.py
porter/: porter.py  pyproject.toml  requirements.txt
tests/: conftest.py  constants.py
tests/api/: test_deployment_api.py
(+4 files in other folders)
